cart overflow fix

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -386,6 +386,9 @@ md-progress-linear .md-bar {
   overflow: scroll;
   background-color: #fff;
 }
+.scroll{
+  overflow: scroll;
+}
 tbody.cartRows{
 	position: fixed;
 	display: block;
